# hf-model-tester

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
src/: z-image-turbo.py
src/lib/: model.py  read_prompt.py  save_image.py  timer.py
